<resources>
    <string name="app_name">KotlinDao</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="add">Add</string>
    <string name="please_complete">Please complete the fields</string>
    <string name="delete">Delete</string>
    <string name="books">Books</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
